--- a/test/ng-img-crop.html
+++ b/test/ng-img-crop.html
@@ -40,6 +40,8 @@
     Area type:
     <label><input type="radio" ng-model="type" value="circle" /> Circle</label>
     <label><input type="radio" ng-model="type" value="square" /> Square</label>
+    <label><input type="radio" ng-model="type" value="ellipse" /> Ellipse</label>
+    <label><input type="radio" ng-model="type" value="rect" /> Rect</label>
     <!--<label><input type="radio" ng-model="type" value="rectangle" /> Rectangle</label>-->
   </div>
   <div>
@@ -83,6 +85,7 @@
     <img-crop image="imageDataURI"
               result-image="$parent.resImageDataURI"
               change-on-fly="changeOnFly"
+              ratio="0.5"
               area-type="{{type}}"
               area-min-size="selMinSize"
               result-image-format="{{resImgFormat}}"
